# rxpr

./: Cargo.toml  Makefile  README.md
.github/workflows/: check.yml  publish.yml
src/: core.rs  main.rs  state.rs
src/core/: ast.rs  num.rs
src/core/ast/: constant.rs  expr.rs  factor.rs  term.rs
