[package]
name = "rxpr"
version = "0.1.1-dev.2"
authors = ["Hirokazu Nishioka <hiro@nisshiee.org>"]
edition = "2018"
license = "MIT"
description = "Human friendly `expr` command written in Rust."
homepage = "https://github.com/nisshiee/rxpr"
repository = "https://github.com/nisshiee/rxpr"
readme = "README.md"
exclude = [
  "doc/*",
]

[dependencies]
nom = "5.1.1"
termion = "1.5.5"
