[package]
name = "rxpr"
version = "0.1.1"
authors = ["Hirokazu Nishioka <hiro@nisshiee.org>"]
edition = "2018"
license = "MIT"
description = "Human friendly `expr` command written in Rust."
homepage = "https://github.com/nisshiee/rxpr"
repository = "https://github.com/nisshiee/rxpr"
readme = "README.md"
exclude = [
  "doc/*",
]

[dependencies]
clipboard = "0.5.0"
nom = "5.1.1"
structopt = "0.3.14"
termion = "1.5.5"
